--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@
 	console.log(arr2);
 	console.log(arr3);
 
-	console.log(arr3[2]); // se le indica que indice del array se muestra
+	// console.log(arr3[2]); // se le indica que indice del array se muestra
 
+	// console.log(arr3[2]); // se le indica que indice del array se muestra
+
+	for (var i = 0; i >= 0; i--) {
+		Things[i]
+	};
 
 	</script>
 </body>
