corregida tarea, agregadas 2 atributos faltantes

--- a/tarea-js-1.html
+++ b/tarea-js-1.html
@@ -16,6 +16,8 @@
 			this.ram = '2gb';
 			this.dd = '500gb';
 			this.procesador = 'i3';
+			this.peso = '2kg';
+			this.video = 'nVidia';
 		}
 
 		var compu1 = new Computador();
